# pid-rs

./: .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
crates/pid-core/: Cargo.toml  README.md
crates/pid-core/examples/: discrete_sxpid.rs
crates/pid-core/src/: discrete_pid.rs  lib.rs  pipeline.rs  sxpid.rs
crates/pid-core/tests/: gaussian_pid_atoms.rs  sxpid_axioms.rs  sxpid_bootstrap.rs  sxpid_gaussian_oracle.rs  sxpid_nsource.rs  sxpid_properties.rs  sxpid_reference.rs
crates/pid-python/: Cargo.toml  README.md  pyproject.toml
crates/pid-python/src/: lib.rs
crates/pid-python/tests/: test_smoke.py
crates/pid-runlog/: Cargo.toml  README.md
crates/pid-runlog/src/: lib.rs
scripts/: check-version-coherence.sh
