[package]
name = "pid-core"
description = "Continuous mutual-information (KSG) and shared-exclusions partial information decomposition (Isx PID) estimators"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
documentation = "https://docs.rs/pid-core"
readme = "README.md"
keywords = ["information-theory", "mutual-information", "entropy", "pid", "estimator"]
categories = ["science", "mathematics", "algorithms"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pid_core"
path = "src/lib.rs"

[features]
# Exact data-parallel KSG kNN (bit-identical results to the serial path; rayon-backed).
parallel = ["dep:rayon"]

[dependencies]
anyhow.workspace = true
nalgebra.workspace = true
serde_json.workspace = true
pid-runlog.workspace = true
rayon = { workspace = true, optional = true }
